--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,12 @@
             <artifactId>spring-context</artifactId>
             <version>5.3.20</version>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>13.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
